demos/microshift-disconnected/files/manifests/test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: test-app
  name: test-app
spec: {}
