demos/microshift-disconnected/files/manifests/test/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: test-app-route
  namespace: test-app
spec:
  port:
    targetPort: 8080 
  to:
    kind: Service
    name: test-app-service
    weight: 10
